--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,9 +153,8 @@ h1 {
 	text-align: center;
 }
 
-#indexPageSize {
+.indexPageSize {
 	height: 100%;
 	min-height: 700px; /* determines the page height and the distance from footer */
-	min-width: 400px;
 	position: relative;
 }
